[gd_scene load_steps=13 format=2]

[ext_resource path="res://GUI/arrow.png" type="Texture2D" id=1]
[ext_resource path="res://GUI/arrow-click.png" type="Texture2D" id=2]
[ext_resource path="res://GUI/arrow-hover.png" type="Texture2D" id=3]
[ext_resource path="res://GUI/Theme.tres" type="Theme" id=4]
[ext_resource path="res://EquipmentPro.ttf" type="FontFile" id=5]
[ext_resource path="res://GUI/GUI.gd" type="Script" id=6]
[ext_resource path="res://GUI/ninepatch-nocolor-big.png" type="Texture2D" id=7]

[sub_resource type="Shader" id=4]
code = "shader_type canvas_item;
render_mode blend_mix;

uniform float pixels = 100.0;
uniform vec4 col1 : source_color;
uniform vec4 col2 : source_color;

vec2 rotate(vec2 coord, float angle){
	coord -= 0.5;
	coord *= mat2(vec2(cos(angle),-sin(angle)),vec2(sin(angle),cos(angle)));
	return coord + 0.5;
}

bool dither(vec2 uv1, vec2 uv2) {
	return mod(uv1.x+uv2.y,2.0/pixels) <= 1.0 / pixels;
}

void fragment() {
	vec2 coord = UV;

	coord = rotate(coord, 3.1416*0.7);
	coord += vec2(0.025) * -TIME;

	float f = mod(coord.y * 1.0, 1.0);
	vec3 col = col1.rgb;
	if (f > 0.5) {
		col = col2.rgb;
	}
	
	COLOR = vec4(col, 1.0);
}"

[sub_resource type="ShaderMaterial" id=5]
shader = SubResource( 4 )
shader_parameter/pixels = 100.0
shader_parameter/col1 = Color( 0.384314, 0.552941, 0.72549, 1 )
shader_parameter/col2 = Color( 0.466667, 0.662745, 0.890196, 1 )

[sub_resource type="FontFile" id=1]
size = 80
outline_size = 6
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="FontFile" id=2]
size = 45
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="ViewportTexture" id=6]
viewport_path = NodePath("SubViewport")

[node name="GUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource( 5 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="SpriteBackground" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 152.0
offset_top = 47.0
offset_right = -511.0
offset_bottom = -49.0
color = Color( 1, 1, 1, 0.168627 )

[node name="SpriteBorder" type="NinePatchRect" parent="."]
offset_left = 125.0
offset_top = 20.0
offset_right = 663.0
offset_bottom = 680.0
texture = ExtResource( 7 )
patch_margin_left = 70
patch_margin_top = 70
patch_margin_right = 70
patch_margin_bottom = 70

[node name="Label" type="Label" parent="SpriteBorder"]
anchor_right = 1.0
offset_left = 40.0
offset_top = 38.0
offset_right = -40.0
offset_bottom = 170.0
theme_override_colors/font_color = Color( 1, 1, 0.94902, 1 )
theme_override_fonts/font = SubResource( 1 )
text = "Name"
align = 1
autowrap = true

[node name="CenterContainer" type="CenterContainer" parent="SpriteBorder"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 143.0
offset_bottom = 13.0

[node name="SpriteHolder" type="Control" parent="SpriteBorder/CenterContainer"]
offset_left = 269.0
offset_top = 265.0
offset_right = 269.0
offset_bottom = 265.0

[node name="Right" type="TextureButton" parent="."]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -473.0
offset_top = 306.0
offset_right = -402.0
offset_bottom = -289.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 3 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Left" type="TextureButton" parent="."]
visible = false
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1041.0
offset_top = 306.0
offset_right = -970.0
offset_bottom = -288.0
scale = Vector2( -1, 1 )
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 3 )
expand = true
stretch_mode = 5

[node name="Settings" type="Panel" parent="."]
self_modulate = Color( 0, 0, 0, 0.121569 )
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 798.0
offset_top = -701.0
offset_right = 1151.0
offset_bottom = 1.0
theme = ExtResource( 4 )

[node name="VBoxContainer" type="VBoxContainer" parent="Settings"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -10.0

[node name="HBoxContainer4" type="HBoxContainer" parent="Settings/VBoxContainer"]
offset_right = 323.0
offset_bottom = 46.0

[node name="Label" type="Label" parent="Settings/VBoxContainer/HBoxContainer4"]
offset_right = 323.0
offset_bottom = 46.0
size_flags_horizontal = 3
theme_override_fonts/font = SubResource( 2 )
text = "Settings"

[node name="HSeparator" type="HSeparator" parent="Settings/VBoxContainer"]
offset_top = 50.0
offset_right = 323.0
offset_bottom = 70.0
custom_minimum_size = Vector2( 0, 20 )

[node name="HBoxContainer" type="HBoxContainer" parent="Settings/VBoxContainer"]
offset_top = 74.0
offset_right = 323.0
offset_bottom = 130.0

[node name="Label2" type="Label" parent="Settings/VBoxContainer/HBoxContainer"]
offset_top = 5.0
offset_right = 159.0
offset_bottom = 51.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.7
theme_override_fonts/font = SubResource( 2 )
text = "Width:"

[node name="Width" type="SpinBox" parent="Settings/VBoxContainer/HBoxContainer"]
offset_left = 163.0
offset_right = 323.0
offset_bottom = 56.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.7
theme = ExtResource( 4 )
min_value = 10.0
max_value = 128.0
value = 45.0
rounded = true

[node name="HBoxContainer2" type="HBoxContainer" parent="Settings/VBoxContainer"]
offset_top = 134.0
offset_right = 323.0
offset_bottom = 190.0

[node name="Label2" type="Label" parent="Settings/VBoxContainer/HBoxContainer2"]
offset_top = 5.0
offset_right = 159.0
offset_bottom = 51.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.7
theme_override_fonts/font = SubResource( 2 )
text = "Height:"

[node name="Height" type="SpinBox" parent="Settings/VBoxContainer/HBoxContainer2"]
offset_left = 163.0
offset_right = 323.0
offset_bottom = 56.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.7
theme = ExtResource( 4 )
min_value = 10.0
max_value = 128.0
value = 45.0

[node name="HBoxContainer3" type="HBoxContainer" parent="Settings/VBoxContainer"]
offset_top = 194.0
offset_right = 323.0
offset_bottom = 246.0

[node name="Label" type="Label" parent="Settings/VBoxContainer/HBoxContainer3"]
offset_top = 3.0
offset_right = 131.0
offset_bottom = 49.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.7
theme_override_fonts/font = SubResource( 2 )
text = "Outline:"

[node name="ToggleOutline" type="Button" parent="Settings/VBoxContainer/HBoxContainer3"]
offset_left = 135.0
offset_right = 323.0
offset_bottom = 52.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
theme = ExtResource( 4 )
text = "On"
flat = true

[node name="HBoxColorCount" type="HBoxContainer" parent="Settings/VBoxContainer"]

[node name="Label" type="Label" parent="Settings/VBoxContainer/HBoxColorCount"]
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.7
theme_override_fonts/font = SubResource( 2 )
text = "Colors:"

[node name="ColorCount" type="SpinBox" parent="Settings/VBoxContainer/HBoxColorCount"]
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.7
theme = ExtResource( 4 )
min_value = 2.0
max_value = 32.0
value = 12.0
rounded = true

[node name="HBoxPaletteMode" type="HBoxContainer" parent="Settings/VBoxContainer"]

[node name="Label" type="Label" parent="Settings/VBoxContainer/HBoxPaletteMode"]
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.7
theme_override_fonts/font = SubResource( 2 )
text = "Palette:"

[node name="PaletteMode" type="OptionButton" parent="Settings/VBoxContainer/HBoxPaletteMode"]
size_flags_horizontal = 3
theme = ExtResource( 4 )

[node name="HBoxCustomPalette" type="HBoxContainer" parent="Settings/VBoxContainer"]
custom_minimum_size = Vector2( 0, 68 )

[node name="PaletteSourceLabel" type="Label" parent="Settings/VBoxContainer/HBoxCustomPalette"]
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.7
theme_override_fonts/font = SubResource( 2 )
text = "Palette source:"

[node name="PaletteStatus" type="Label" parent="Settings/VBoxContainer/HBoxCustomPalette"]
size_flags_horizontal = 3
theme_override_fonts/font = SubResource( 2 )
text = "Generator"
align = 1

[node name="LoadPaletteButton" type="Button" parent="Settings/VBoxContainer/HBoxCustomPalette"]
mouse_default_cursor_shape = 2
size_flags_horizontal = 1
theme = ExtResource( 4 )
text = "Load File"
flat = true

[node name="PastePaletteButton" type="Button" parent="Settings/VBoxContainer/HBoxCustomPalette"]
mouse_default_cursor_shape = 2
size_flags_horizontal = 1
theme = ExtResource( 4 )
text = "Paste"
flat = true

[node name="ClearPaletteButton" type="Button" parent="Settings/VBoxContainer/HBoxCustomPalette"]
mouse_default_cursor_shape = 2
size_flags_horizontal = 1
theme = ExtResource( 4 )
text = "Clear"
disabled = true
flat = true

[node name="HBoxHue" type="HBoxContainer" parent="Settings/VBoxContainer"]

[node name="Label" type="Label" parent="Settings/VBoxContainer/HBoxHue"]
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.7
theme_override_fonts/font = SubResource( 2 )
text = "Hue Shift:"

[node name="HueShift" type="HSlider" parent="Settings/VBoxContainer/HBoxHue"]
size_flags_horizontal = 3
theme = ExtResource( 4 )
min_value = -180.0
max_value = 180.0
step = 1.0
value = 0.0

[node name="HueLabel" type="Label" parent="Settings/VBoxContainer/HBoxHue"]
size_flags_horizontal = 1
theme_override_fonts/font = SubResource( 2 )
text = "0Â°"

[node name="HBoxSaturation" type="HBoxContainer" parent="Settings/VBoxContainer"]

[node name="Label" type="Label" parent="Settings/VBoxContainer/HBoxSaturation"]
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.7
theme_override_fonts/font = SubResource( 2 )
text = "Saturation:"

[node name="Saturation" type="HSlider" parent="Settings/VBoxContainer/HBoxSaturation"]
size_flags_horizontal = 3
theme = ExtResource( 4 )
min_value = 50.0
max_value = 150.0
step = 1.0
value = 100.0

[node name="SaturationLabel" type="Label" parent="Settings/VBoxContainer/HBoxSaturation"]
size_flags_horizontal = 1
theme_override_fonts/font = SubResource( 2 )
text = "100%"

[node name="HBoxBrightness" type="HBoxContainer" parent="Settings/VBoxContainer"]

[node name="Label" type="Label" parent="Settings/VBoxContainer/HBoxBrightness"]
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.7
theme_override_fonts/font = SubResource( 2 )
text = "Brightness:"

[node name="Brightness" type="HSlider" parent="Settings/VBoxContainer/HBoxBrightness"]
size_flags_horizontal = 3
theme = ExtResource( 4 )
min_value = -30.0
max_value = 30.0
step = 1.0
value = 0.0

[node name="BrightnessLabel" type="Label" parent="Settings/VBoxContainer/HBoxBrightness"]
size_flags_horizontal = 1
theme_override_fonts/font = SubResource( 2 )
text = "0%"

[node name="HBoxLockPalette" type="HBoxContainer" parent="Settings/VBoxContainer"]

[node name="Label" type="Label" parent="Settings/VBoxContainer/HBoxLockPalette"]
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.7
theme_override_fonts/font = SubResource( 2 )
text = "Lock Palette:"

[node name="LockPalette" type="CheckBox" parent="Settings/VBoxContainer/HBoxLockPalette"]
size_flags_horizontal = 3
theme = ExtResource( 4 )
pressed = true
text = "Seed linked"

[node name="HBoxFrames" type="HBoxContainer" parent="Settings/VBoxContainer"]

[node name="Label" type="Label" parent="Settings/VBoxContainer/HBoxFrames"]
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.7
theme_override_fonts/font = SubResource( 2 )
text = "Frames:"

[node name="FrameCount" type="SpinBox" parent="Settings/VBoxContainer/HBoxFrames"]
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.7
theme = ExtResource( 4 )
min_value = 2.0
max_value = 16.0
step = 1.0
value = 6.0
rounded = true

[node name="Control" type="Control" parent="Settings/VBoxContainer"]
offset_top = 250.0
offset_right = 323.0
offset_bottom = 275.0
custom_minimum_size = Vector2( 0, 25 )

[node name="VBoxContainer" type="Control" parent="Settings/VBoxContainer"]
offset_top = 279.0
offset_right = 323.0
offset_bottom = 279.0

[node name="HBoxContainer" type="HBoxContainer" parent="Settings/VBoxContainer/VBoxContainer"]
offset_right = 323.0
offset_bottom = 46.0

[node name="Label" type="Label" parent="Settings/VBoxContainer/VBoxContainer/HBoxContainer"]
offset_right = 169.0
offset_bottom = 46.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.7
theme_override_fonts/font = SubResource( 2 )
text = "Symmetry:"

[node name="SymmetryPercent" type="Label" parent="Settings/VBoxContainer/VBoxContainer/HBoxContainer"]
offset_left = 173.0
offset_right = 323.0
offset_bottom = 46.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.7
theme_override_fonts/font = SubResource( 2 )
text = "100%"
align = 1

[node name="SymmetrySlider" type="HSlider" parent="Settings/VBoxContainer/VBoxContainer"]
offset_left = -3.0
offset_top = 60.0
offset_right = 323.0
offset_bottom = 76.0
theme = ExtResource( 4 )
value = 100.0

[node name="ExportButton" type="Button" parent="Settings"]
offset_left = 34.2945
offset_top = 625.061
offset_right = 279.294
offset_bottom = 671.061
mouse_default_cursor_shape = 2
theme = ExtResource( 4 )
text = "Export PNG"
flat = true
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExportSpriteSheet" type="Button" parent="Settings"]
offset_left = 34.2945
offset_top = 575.061
offset_right = 279.294
offset_bottom = 621.061
mouse_default_cursor_shape = 2
theme = ExtResource( 4 )
text = "Export Sprite Sheet"
flat = true
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PaletteFileDialog" type="FileDialog" parent="."]
title = "Select Palette File"
size = Vector2i( 800, 600 )
use_native_dialog = true

[node name="PalettePasteDialog" type="AcceptDialog" parent="."]
title = "Paste Palette Colors"
size = Vector2i( 640, 480 )

[node name="PaletteText" type="TextEdit" parent="PalettePasteDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = -16.0
wrap_mode = 2

[node name="SubViewport" type="SubViewport" parent="."]
size = Vector2( 130, 130 )
own_world = true
transparent_bg = true
hdr = false
disable_3d = true
usage = 0
render_target_v_flip = true

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2( 0.01, 0.01 )
texture = SubResource( 6 )

[connection signal="pressed" from="Right" to="." method="_on_Right_pressed"]
[connection signal="pressed" from="Left" to="." method="_on_Left_pressed"]
[connection signal="value_changed" from="Settings/VBoxContainer/HBoxContainer/Width" to="." method="_on_Width_value_changed"]
[connection signal="value_changed" from="Settings/VBoxContainer/HBoxContainer2/Height" to="." method="_on_Height_value_changed"]
[connection signal="pressed" from="Settings/VBoxContainer/HBoxContainer3/ToggleOutline" to="." method="_on_ToggleOutline_pressed"]
[connection signal="value_changed" from="Settings/VBoxContainer/HBoxColorCount/ColorCount" to="." method="_on_ColorCount_value_changed"]
[connection signal="item_selected" from="Settings/VBoxContainer/HBoxPaletteMode/PaletteMode" to="." method="_on_PaletteMode_item_selected"]
[connection signal="value_changed" from="Settings/VBoxContainer/HBoxHue/HueShift" to="." method="_on_HueShift_value_changed"]
[connection signal="value_changed" from="Settings/VBoxContainer/HBoxSaturation/Saturation" to="." method="_on_Saturation_value_changed"]
[connection signal="value_changed" from="Settings/VBoxContainer/HBoxBrightness/Brightness" to="." method="_on_Brightness_value_changed"]
[connection signal="toggled" from="Settings/VBoxContainer/HBoxLockPalette/LockPalette" to="." method="_on_LockPalette_toggled"]
[connection signal="value_changed" from="Settings/VBoxContainer/HBoxFrames/FrameCount" to="." method="_on_FrameCount_value_changed"]
[connection signal="drag_ended" from="Settings/VBoxContainer/VBoxContainer/SymmetrySlider" to="." method="_on_HSlider_drag_ended"]
[connection signal="value_changed" from="Settings/VBoxContainer/VBoxContainer/SymmetrySlider" to="." method="_on_HSlider_value_changed"]
[connection signal="pressed" from="Settings/VBoxContainer/HBoxCustomPalette/LoadPaletteButton" to="." method="_on_LoadPaletteButton_pressed"]
[connection signal="pressed" from="Settings/VBoxContainer/HBoxCustomPalette/PastePaletteButton" to="." method="_on_PastePaletteButton_pressed"]
[connection signal="pressed" from="Settings/VBoxContainer/HBoxCustomPalette/ClearPaletteButton" to="." method="_on_ClearPaletteButton_pressed"]
[connection signal="pressed" from="Settings/ExportButton" to="." method="_on_ExportButton_pressed"]
[connection signal="pressed" from="Settings/ExportSpriteSheet" to="." method="_on_ExportSpriteSheet_pressed"]
[connection signal="file_selected" from="PaletteFileDialog" to="." method="_on_PaletteFileDialog_file_selected"]
[connection signal="confirmed" from="PalettePasteDialog" to="." method="_on_PalettePasteDialog_confirmed"]
